//声明protobuf版本为proto3
syntax = "proto3";

//消息实体生成包路径
package com.sun.lib.grpc.user.dto;

//如果为true时message会生成多个类
option java_multiple_files = true;

//查询列表请求实体
message SearchUserRequest {
  int32 id = 1;
  string name = 2;
  int32 age =3;
  string address = 4;
}

//返回用户信息实体
message UserResponse {
  int32 id = 1;
  string name = 2;
  int32 age =3;
  string address = 4;
}

//添加用户实体
message AddUserRequest {
  string name = 1;
  int32 age =2;
  string address = 3;
}
//返回用户的List
message UserList{
  repeated UserResponse userResponse=1;
}