//声明protobuf版本为proto3
syntax = "proto3";

//引入实体定义
import "user_dto.proto";

//如果为true时message会生成多个类
option java_multiple_files = true;

//此处要注意和user_dto.proto相同包，否则找不到实体
package com.sun.lib.grpc.user.dto;

//服务定义生成的包
option java_package = "com.sun.lib.grpc.user.service";

//指定生成Java的类名，如果没有该字段则根据proto文件名称以驼峰的形式生成类名
option java_outer_classname = "UserProto";

//服务定义
service User {
  //添加用户信息，返回单个对象
  rpc add (AddUserRequest) returns (UserResponse) {}
  //查询用户列表，以流式返回多个对象
  rpc list (SearchUserRequest) returns (stream UserResponse) {}
  //客户端流式请求，返回非流式的对象
  rpc list1 (stream SearchUserRequest) returns (UserList){}
  //客户端流式请求，返回流式响应
  rpc addBatch (stream AddUserRequest) returns (stream UserResponse) {}
}